<resources>
    <string name="app_name">Bib Buddy</string>
    <string name="app_description">Eine offene Atmosphäre für deine Gedanken und Ideen bei der
        Recherche. Unser Service macht deine Literatur-Arbeit so intuitiv wie nie!</string>
    <string name="description_logo">BibBuddy-Logo. Zwei stilisierte Anführungszeichen, die einen Smilie symbolisieren.</string>
    <string name="description_settings">Ein schwarzes Zahnrad-Icon, das Einstellungen symbolisiert.</string>
    <string name="description_text_note">Ein schwarz-weißes Icon von einem Blatt Papier mit einem Knick in der oberen rechten Ecke.</string>
    <string name="description_book">Ein schwarz-weißes Icon von einem geschlossenen Buch, das auf dem Rücken liegt.</string>
    <string name="description_note">Ein schwarz-weißes Icon von einem schrägen Stift, das Notizen symbolisiert.</string>
    <string name="description_library">Ein schwarz-weißes Icon von drei aneinander gelehnten Büchern.</string>
    <string name="description_person">Ein schwarz-weißes Icon von einer Büste, die eine Person symbolisiert.</string>
    <string name="record_microphone">Ein türkises Mikrofon-Icon, das eine Aufnahme-Funktion symbolisiert.</string>
    <string name="stop_button_note">Ein schwarzes quadratisches Icon, das eine Stop-Funktion symbolisiert.</string>
    <string name="play_button_note">Ein schwarzes dreieckiges Icon, das eine Abspiel-Funktion symbolisiert.</string>
    <string name="microphone">Ein schwarzes Mikrofon-Icon, das den Notiztyp einer Sprachaufnahme symbolisiert.</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_search">Suche</string>
    <string name="navigation_library">Bibliothek</string>
    <string name="navigation_notes">Notizen</string>
    <string name="empty_list">Hier gibt\'s noch nichts zu sehen!</string>
    <string name="navigation_settings">Einstellungen</string>
    <string name="back">Zurück</string>
    <string name="add">+</string>
    <string name="ok">Ok</string>
    <string name="cancel">Abbrechen</string>
    <string name="cancel_short">Abbr.</string>
    <string name="delete">Löschen</string>
    <string name="rename">Umbenennen</string>
    <string name="change">Ändern</string>
    <string name="backup">Backup</string>
    <string name="confirm">Bestätigen</string>
    <string name="error">Fehler</string>
    <string name="delete_warning">Das können wir <b>nicht rückgängig</b> machen!</string>
    <string name="delete_question">löschen?</string>
    <string name="finally_delete">wirklich löschen?</string>
    <string name="delete_counter_msg">mit insgesamt</string>
    <string name="add_shelf">Hinzufügen</string>
    <string name="add_new_shelf">Regal hinzufügen</string>
    <string name="input_shelf_name">Regalnamen eingeben</string>
    <string name="invalid_name">Bitte gib einen Namen für das Regal an.</string>
    <string name="name_exists">Sorry, den Namen gibt\'s schon!</string>
    <string name="shelf_added">Ok, wir haben das Regal hinzugefügt.</string>
    <string name="add_shelf_tooltip">Ein neues Regal anlegen.</string>
    <string name="shelf">Regal</string>
    <string name="rename_small">umbenennen</string>
    <string name="rename_shelf">Regal umbenennen</string>
    <string name="renamed_shelf">Ok, wir haben das Regal umbenannt.</string>
    <string name="delete_shelf">Regal löschen</string>
    <string name="delete_shelves">Regale löschen</string>
    <string name="delete_shelf_message">Willst du das Regal </string>
    <string name="delete_shelves_message">Willst du die Regale </string>
    <string name="deleted_shelf">Ok, wir haben das Regal gelöscht.</string>
    <string name="deleted_shelves">Ok, wir haben die Regale gelöscht.</string>
    <string name="library_help">Um ein neues Regal anzulegen, drücken Sie den <b>+-Button</b>. Danach
        geben Sie einen Namen ein. In dem Regal können Sie anschließend Ihre Bücher speichern und zu
        diesen Notizen schreiben. Für weitere Informationen öffnen Sie das Menü rechts oben und
        klicken Sie auf <b>Hilfe</b>. </string>
    <string name="book">Buch</string>
    <string name="books">Bücher</string>
    <string name="add_book">Buch hinzufügen</string>
    <string name="add_book_scan_text">ISBN scannen</string>
    <string name="add_book_manually_text">Selbst hinzufügen</string>
    <string name="add_book_online_text">ISBN eingeben</string>
    <string name="add_book_tooltip">Ein neues Buch hinzufügen.</string>
    <string name="added_book">Ok, wir haben das Buch hinzugefügt.</string>
    <string name="change_book">Buchdaten ändern</string>
    <string name="delete_book">Buch löschen</string>
    <string name="delete_books">Bücher löschen</string>
    <string name="deleted_book">Ok, wir haben das Buch gelöscht.</string>
    <string name="deleted_books">Ok, wir haben die Bücher gelöscht.</string>
    <string name="delete_book_message">Willst du das Buch </string>
    <string name="delete_books_message">Willst du die Bücher </string>
    <string name="delete_book_notes">mit folgenden Notizen </string>
    <string name="book_help">Um ein neues Buches hinzuzufügen, drücken Sie den <b>+-Button</b>. Es
        öffnet sich ein Menü, in welchem Sie zwischen <b>Buch mittels ISBN suchen</b>, <b>arcode des
            Buches einscannen</b> und <b>Buch manuell eingeben</b> wählen können. Wurde das Buch
        erfolgreich angelegt, wird es mit seinen Metadaten angezeigt. Nun können Sie Notizen zu dem
        Buch erstellen. Für weitere Informationen öffnen Sie das Menü rechts oben und klicken Sie
        auf <b>Hilfe</b>.</string>
    <string name="book_form_notice">Pflichtfelder sind mit * markiert</string>
    <string name="book_form_title">Titel*</string>
    <string name="book_form_subtitle">Untertitel</string>
    <string name="book_form_pub_year">Jahr</string>
    <string name="book_form_publisher">Verlag</string>
    <string name="book_form_volume">Band</string>
    <string name="book_form_edition">Auflage</string>
    <string name="book_form_isbn">ISBN</string>
    <string name="book_form_add_infos">Mehr Infos</string>
    <string name="add_author_btn">Autoren bearbeiten</string>
    <string name="add_author_tooltip">Einen Autor hinzufügen oder ändern</string>
    <string name="author">Autor</string>
    <string name="authors">Autoren</string>
    <string name="author_first_name">Vorname*</string>
    <string name="author_last_name">Nachname*</string>
    <string name="author_title">Titel</string>
    <string name="change_author">Autor ändern</string>
    <string name="add_author">Autor hinzufügen</string>
    <string name="delete_author">Autor löschen</string>
    <string name="delete_authors">Autoren löschen</string>
    <string name="deleted_author">Ok, wir haben den Autor gelöscht.</string>
    <string name="deleted_authors">Ok, wir haben die Autoren gelöscht.</string>
    <string name="delete_author_message">Willst du den Autor </string>
    <string name="delete_authors_message">Willst du die Autoren </string>
    <string name="author_help">Um einen neuen Autor hinzuzufügen, drücken Sie den <b>+-Button</b>.
        Es öffnet sich ein Eingabeform, in die sie den Titel, Vornamen und Nachnamen des Autors
        eingeben können. Wurde der Autor erfolgreich angelegt, wird er in der Liste angezeigt.
        Für weitere Informationen öffnen Sie das Menü rechts oben und klicken Sie auf
        <b>Hilfe</b>.</string>
    <string name="author_help_text">
        <![CDATA[
        <h1><u>Hilfe zu den Autoren</u></h1>
        <p>Sie befinden sich in der Authorensansicht. Hier können Sie neue Autoren anlegen,
        bestehende anpassen oder löschen</p>

        <h2>Anlegen eines neuen Autors/h2>
        <p>Einen neuen Autor können Sie mit Klicken auf den <b>+-Button</b> angelegen.Sie gelangen
        dann zu einem Eingabeformular, in welchem Sie den Titel, Vor- und Nachnamen des Autors
        einegeben können. Durch Klick auf den internen Zurück-Button wird dieser automatisch
        gespeichert.

        <h2>Autordaten ändern</h2>
        <p>Um die Daten eines Autors zu ändern, klicken Sie diesen an und sie gelangen zum
        Eingabeformular. Hier können Sie die Daten anpassen. Durch Klicken auf den internen
        Zurück-Button werden die Daten automatisch gespeicheert.<br><br>

        <h2>Autor(en) löschen</h2>
        <p>Wählen Sie einen oder mehrere Autoren aus, indem Sie diese gedrückt halten. Klicken Sie
        dann oben rechts auf das Menü und wählen Sie <b>Löschen</b> aus. Bestätigen Sie dann, dass
        Sie die ausgewählten Autoren endgültig löschen wollen.<br><br>
        <u><b>Achtung!</b></u> Die Daten können nicht wieder hergestellt werden. <br><br>

        ]]>
    </string>
    <string name="isbn_scan">ISBN scannen</string>
    <string name="isbn_not_found">Sorry, diese ISBN konnten wir nicht finden!</string>
    <string name="isbn_not_valid">Sorry, diese ISBN scheint nicht richtig zu sein!</string>
    <string name="note">Notiz</string>
    <string name="notes">Notizen</string>
    <string name="add_note">Notiz hinzufügen</string>
    <string name="take_picture_note">Foto</string>
    <string name="create_text_note">Textnotiz</string>
    <string name="create_voice_note">Sprachnotiz</string>
    <string name="add_note_tooltip">Eine neue Notiz erstellen.</string>
    <string name="delete_note">Notiz löschen</string>
    <string name="delete_notes">Notizen löschen</string>
    <string name="deleted_note">Ok, wir haben die Notiz gelöscht.</string>
    <string name="deleted_notes">Ok, wir haben die Notizen gelöscht.</string>
    <string name="delete_note_message">Willst du die Notiz </string>
    <string name="delete_notes_message">Willst du die Notizen </string>
    <string name="note_list_help"> Um eine neue Notiz hinzuzufügen, drücke Sie den <b>+-Button</b>
        und wähle Sie dann die Notizart (Text, Audio oder Bild) aus. Daraufhin öffnet sich ein
        Texteditor, in welchen Sie Ihre Notiz eintippen können. Die erste Zeile der Notiz wird als
        Notizname gesetzt, darunter folgt der Text. Bei Klicken auf den internen Zurück-Button wird
        die Notiz gespeichert. Sie ist dann unter dem jeweiligen Buch und in der gesamten Notizliste
        zu finden. Für weitere Informationen öffnen Sie das Menü rechts oben und klicken Sie auf
        <b>Hilfe</b>.</string>
    <string name="undo">Rückgängig</string>
    <string name="redo">Wiederholen</string>
    <string name="toast_bold">Fett</string>
    <string name="toast_italic">Kursiv</string>
    <string name="toast_underline">Unterstreichen</string>
    <string name="toast_strikethrough">Durchstreichen</string>
    <string name="toast_bullet">Aufzählung</string>
    <string name="toast_quote">Zitat</string>
    <string name="toast_alignLeft">Linksbündig</string>
    <string name="toast_alignRight">Rechtsbündig</string>
    <string name="toast_alignCenter">Zentriert</string>
    <string name="delete_notification">Ok, wir haben die Notiz gelöscht.</string>
    <string name="slidebar_left">Slidebar_Left</string>
    <string name="slidebar_right">Slidebar_Right</string>
    <string name="round_border">Round_Border</string>
    <string name="library_icon">Library_Icon</string>
    <string name="format_options">Format Options</string>
    <string name="format_arrow">Format Arrow</string>
    <string name="storage_permission_needed">Zugriff erforderlich</string>
    <string name="storage_permission_alert_msg">
        Hey, wir brauchen Zugriff, um Dateien zu speichern - bitte erlauben und nochmal versuchen!
    </string>
    <string name="storage_permission_denied">Zugriff verweigert :(</string>
    <string name="exported_file_stored_in">Exportierte Datei ist gespeichert unter:</string>
    <string name="export_library">Bibliothek exportieren (BibTeX)</string>
    <string name="export_shelf">Regal(e) exportieren (BibTeX)</string>
</resources>