<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_library_rename_shelf"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="20dp"
    android:elevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_rename_shelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/rename_shelf"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_rename_shelf_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_rename_shelf"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/input_shelf_name"
            android:background="@color/white"
            android:focusable="true"
            android:hint="@string/rename_shelf"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_rename_shelf_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_rename_shelf_name"
            android:text="@string/back"
            android:theme="@style/Button.Grey" />

        <Button
            android:id="@+id/btn_rename_shelf_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_rename_shelf_name"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/btn_rename_shelf_cancel"
            android:text="@string/change"
            android:theme="@style/Button.Pink" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
