<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_library_delete_shelf"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_light"
    android:elevation="5dp"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_rename_shelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/delete_shelf"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_rename_shelf_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_rename_shelf"
            android:text="@string/back"
            android:theme="@style/Button.Grey" />

        <Button
            android:id="@+id/btn_rename_shelf_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_rename_shelf"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/btn_rename_shelf_cancel"
            android:text="@string/delete"
            android:theme="@style/Button.Pink" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
