<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_library"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/rounded_corners"
    card_view:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/library_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/description_library"
            android:padding="5dp"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/image_note"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_below="@+id/item_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/description_note"
            android:src="@drawable/pen" />

        <ImageView
            android:id="@+id/image_books"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_below="@+id/item_name"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/note_count"
            android:contentDescription="@string/description_library"
            android:src="@drawable/books" />

        <TextView
            android:id="@+id/note_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_name"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/image_note"
            android:text="@string/navigation_notes"
            android:textSize="15dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/library_icon"
            android:text="Medium Text"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_name"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/image_books"
            android:padding="2dp"
            android:text="@string/book"
            android:textSize="15dp"
            android:textColor="@color/black" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
