<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_author"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="75dp"
    android:layout_marginTop="58dp">


    <TextView
        android:id="@+id/list_view_author_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="58dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/author_help"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_author"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/author_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:contentDescription="@string/add_author_btn"
        android:tooltipText="@string/add_author_tooltip"
        android:focusable="true"
        android:theme="@style/Button.Pink"
        app:maxImageSize="40dp"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:targetApi="o"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
